# ts-semsearch

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  PRD.md  README.md  RUNBOOK.md  SPEC.md  TODOS.md  docker-compose.yml  openapi.json  pyproject.toml  railway.json
clients/: tasco_adapter.dart  tasco_adapter.go  tasco_adapter.mjs  tasco_adapter.py
data/: eval_split.json  weights.json
deck/: index.html  outline.md
deploy/: .env.example  Caddyfile.snippet  DEPLOY.md  download-model.sh  entrypoint.sh
docs/: Q&A.md  methodology.md  mobility-track-briefing-recap.md  pipeline-diagram.html  pipeline-explainer.html  problem-statement.md  review-2026-07-10.md
reports/: ablation-tune.md  embedding-choice.md  latency.json  metrics-bm25-tune.json  metrics-dense-tune.json  metrics-full-test.json  metrics-full-tune.json  metrics-hybrid-tune.json  metrics-random-tune.json  metrics.md  robustness.json  sample-queries.md  stress-1000.md
scripts/: ablation.py  bench_latency.py  check_bedrock.py  embedding_choice.py  export_openapi.py  gen_synth_pois.py  gen_synth_queries.py  ingest.py  report_metrics.py  robustness.py  run_eval.py  sample_queries.py  stress_eval.py  tune.py
tests/: test_admin.py  test_api_contract.py  test_client_adapters_contract.py  test_data.py  test_embeddings_bedrock.py  test_engines.py  test_eval.py  test_explain.py  test_geo.py  test_integrity.py  test_llm_parse.py  test_logging.py  test_modes.py  test_normalize.py  test_parse.py  test_pipeline.py  test_pipeline_trace.py  test_rank.py  test_retrieve.py  test_robustness.py  test_split.py  (+4 more)
(+30 files in other folders)
