[project]
name = "tasco-semsearch"
version = "0.1.0"
description = "AI semantic search & ranking engine for Vietnamese POI search (Tasco Maps, AABW 2026)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pyarrow>=15.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semsearch"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
